kubernetes/apps/monitoring/openstatus/app/checker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openstatus-checker
  labels:
    app.kubernetes.io/name: openstatus-checker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openstatus-checker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openstatus-checker
    spec:
      containers:
        - name: checker
          image: 172.16.87.51:5000/openstatushq/openstatus-checker:ef7691a
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: openstatus-checker
spec:
  selector:
    app.kubernetes.io/name: openstatus-checker
  ports:
    - name: http
      port: 8080
      targetPort: http
