kubernetes/apps/monitoring/openstatus/app/libsql.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openstatus-libsql
  labels:
    app.kubernetes.io/name: openstatus-libsql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: openstatus-libsql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openstatus-libsql
    spec:
      containers:
        - name: libsql
          image: ghcr.io/tursodatabase/libsql-server:latest@sha256:05328338f61d8c6f8f8b224457eb65f429360c62b7bedc13c999c140ec9cfca9
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 5001
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/sqld
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: openstatus-libsql-data
---
apiVersion: v1
kind: Service
metadata:
  name: openstatus-libsql
spec:
  selector:
    app.kubernetes.io/name: openstatus-libsql
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: grpc
      port: 5001
      targetPort: grpc
