kubernetes/apps/monitoring/openstatus/app/status-page.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openstatus-status-page
  labels:
    app.kubernetes.io/name: openstatus-status-page
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: openstatus-status-page
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openstatus-status-page
    spec:
      containers:
        - name: status-page
          image: 172.16.87.51:5000/openstatushq/openstatus-status-page:ef7691a
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 45
            periodSeconds: 15
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 90
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: openstatus-status-page
spec:
  selector:
    app.kubernetes.io/name: openstatus-status-page
  ports:
    - name: http
      port: 3000
      targetPort: http
