kubernetes/apps/monitoring/openstatus/app/httproute-dashboard.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openstatus-dashboard
spec:
  hostnames: ["openstatus.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: openstatus-dashboard
          port: 3000
