kubernetes/apps/monitoring/openstatus/app/httproute-status-page.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openstatus-status-page
spec:
  hostnames: ["status.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: openstatus-status-page
          port: 3000
